# lsu-pria

./: .gitignore  AGENTS.md  README.md  lsupria.py  main.py  pyproject.toml  requirements.txt  setup.py  vcpria.py  webapp.py
colab/: Resume_SignJoey_from_lsu_pria_run.ipynb
deliverables/: README.md  config.json  ilsut_downloads.json  ilsut_keywords.example.json  ilsut_keywords.focused.json  pitch.md  report.md  youtube_validation_cases.example.json
docs/: datasets_ilsut.md  end_to_end_pipeline.md  final_demo_runbook.md  ilsut_training_notes.md  video_training.md
notebooks/: lsu_pria_colab_gaslt_training.ipynb  lsu_pria_colab_multimodal_training.ipynb  lsu_pria_colab_scult_training.ipynb  lsu_pria_colab_slt_training.ipynb  lsu_pria_colab_training.ipynb  lsu_pria_colab_video_training.ipynb  vc_pria_colab_multimodal_training.ipynb  vc_pria_colab_training.ipynb  vc_pria_colab_video_training.ipynb
scripts/: _bootstrap.py  _manifest_utils.py  _slt_dataset_utils.py  analyze_ilsut_support.py  app_dev.py  audit_ilsut_keywords.py  build_deliverables.py  build_ilsut_episodes_csv.py  build_pitch_pptx.py  build_web_ui.sh  check_deliverables.py  clean_artifacts.sh  collect_data.py  collect_multimodal_sequence.py  collect_sequence.py  compare_video_pipelines.py  convert_ilsut_videos.py  dataset_stats.py  download_ilsut.py  eval_ilsut_slt.py  eval_models.py  eval_split.py  export_ilsut_slt_dataset.py  export_session.py  export_session_csv.py  extract_ilsut.py  extract_ilsut_multimodal_sequences.py  extract_ilsut_slt_features.py  extract_labeled_video_dataset.py  extract_labeled_video_multimodal_sequences.py  finalize_demo_selection.py  ilsut_extract_rois.py  ilsut_make_manifest.py  ilsut_utils.py  launch_stack_demo.py  make_report.py  make_results_table.py  merge_subject_csvs.py  package_submission.py  plot_ablation.py  (+31 more)
src/lsu_pria/: demo.py  features.py  hand.py  (+5 more)
web-ui/: .env.development  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+25 files in other folders)
