[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcpria"
version = "0.1.0"
description = "VC-pria: real-time hand sign recognition demo (OpenCV + MediaPipe + ML)"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
# CLI entrypoint is repo-local (vcpria.py). Installable package is vc_pria only.

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
