[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsupria"
version = "0.1.0"
description = "lsu-pria: real-time hand sign recognition demo (OpenCV + MediaPipe + ML)"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
# CLI entrypoint is repo-local (lsupria.py). Installable package is lsu_pria only.

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
